# SoloEngine

./: README.md  Solo.h  android_native_app_glue.c  main.cpp  settings.gradle  solo.pro
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/src/org/solo/: AndroidBinding.java
android/src/org/solo/core/: AndroidBinding.java
android/src/org/solo/test/: MainActivity.java
android/src/org/tdevelopers/solo/core/: AndroidBinding.java
android/src/org/tdevelopers/solo/test/: MainActivity.java
app/: .gitignore  CMakeLists.txt  build.gradle  main.cpp  solo.jks  toKTX(PVR).bat  toKTX(khronos).bat
app/SoloResourceGenerator/: main.cpp
app/resources/input/: bindings.json
app/resources/models/: Box.gltf  Sphere.gltf  scene.gltf
app/resources/models/textures/: map_Shotgun01_baseColor.ktx  map_Shotgun01_metallicRoughness.ktx  map_Shotgun01_normal.ktx
app/resources/shaders/: mesh.frag  mesh.fragc  mesh.fragr  mesh.vert  mesh.vertc  mesh.vertr  ps.frag  ps.fragc  ps.fragr  skin.comp  skin.compc  skinned.vert  skinned.vertc  skinned.vertr  sky.frag  sky.fragc  sky.fragr  sky.vert  sky.vertc  ui.frag  ui.fragc  ui.fragr  ui.vert  ui.vertc  ui.vertr  vs.vert  vs.vertc  vs.vertr
app/resources/textures/: brdf_lut.ktx  env.ktx  env_irr.ktx  sign.ktx  white.ktx
app/solo/: Solo.h
app/solo/application/: S_Application.cpp  S_Application.h
app/solo/audio/: S_Audio.cpp  S_Audio.h
app/solo/base/: S_Object.cpp  S_Object.h
app/solo/debug/: S_Debug.cpp  S_Debug.h
app/solo/file/: S_File.cpp  S_File.h
app/solo/input/: S_Gamepad.cpp  S_Gamepad.h  S_Gestures.cpp  S_Gestures.h  S_InputMap.cpp  S_InputMap.h
app/solo/math/: S_Mat4x4.h  S_Mat4x4.inl  S_Math.h  S_Math.inl  S_Quat.h  S_Quat.inl  S_Vec2.h  S_Vec2.inl  S_Vec3.h  S_Vec3.inl  S_Vec4.h  S_Vec4.inl
app/solo/memory/: S_AlgorithmAllocator.cpp  S_AlgorithmAllocator.h  S_Allocator.cpp  S_Allocator.h  S_Allocator.inl  S_NewDeleteOverrides.h
app/solo/mesh/: S_Mesh.cpp  S_Mesh.h  S_MeshBin.h
app/solo/pack/: S_Pack.cpp  S_Pack.h
app/solo/physics/: S_Physics.cpp  S_Physics.h
app/solo/renderer/: S_Animator.cpp  S_Animator.h  S_Camera.cpp  S_Camera.h  S_CameraController.cpp  S_CameraController.h  S_Handle.h  S_MaterialPool.h  S_Model.cpp  S_Model.h  S_PerFrame.h  S_PipelineDescriptor.h  S_RenderQueue.cpp  S_RenderQueue.h  S_Renderer.cpp  S_Renderer.h  S_RendererAPI.cpp  S_RendererAPI.h  S_Scene.cpp  S_Scene.h  S_Shader.cpp  S_Shader.h  S_Texture.cpp  S_Texture.h  S_TextureSampler.cpp  S_TextureSampler.h  S_VertexBuffer.cpp  S_VertexBuffer.h
app/solo/renderer/vulkan/: S_VulkanAllocator.cpp  S_VulkanAllocator.h  S_VulkanAllocator.inl  S_VulkanBindless.cpp  S_VulkanBindless.h  S_VulkanDeviceAllocator.cpp  S_VulkanDeviceAllocator.h  S_VulkanItemsManager.cpp  S_VulkanItemsManager.h  S_VulkanItemsRequest.cpp  S_VulkanItemsRequest.h  S_VulkanMesh.cpp  S_VulkanMesh.h  S_VulkanPerFrame.cpp  S_VulkanPerFrame.h  S_VulkanPipeline.cpp  S_VulkanPipeline.h  S_VulkanRT.cpp  S_VulkanRT.h  S_VulkanRendererAPI.cpp  S_VulkanRendererAPI.h  S_VulkanShader.cpp  S_VulkanShader.h  S_VulkanShaderReflection.h  S_VulkanSkinning.cpp  S_VulkanSkinning.h  S_VulkanTexture.cpp  S_VulkanTexture.h  S_VulkanTextureSampler.cpp  S_VulkanTextureSampler.h  S_VulkanVertexBuffer.cpp  S_VulkanVertexBuffer.h
app/solo/resource/: S_ResourceManager.cpp  S_ResourceManager.h  S_Resources.h  S_Resources.inl
app/solo/scene/: S_EntityScene.cpp  S_EntityScene.h
app/solo/stl/: S_Array.h  S_Hash.h  S_List.h  S_Map.h  S_Pair.h  S_String.h  S_Tuple.h  S_UnorderedMap.h  S_Vector.h
app/solo/thread/: S_Mutex.cpp  S_Mutex.h  S_Thread.cpp  S_Thread.h
app/solo/ui/: S_ImGuiLayer.cpp  S_ImGuiLayer.h  S_UI.cpp  S_UI.h  S_UIBin.h
app/solo/utility/: S_Animation.h  S_Behavior.h  S_ElapsedTime.cpp  S_ElapsedTime.h  S_Interpolate.h
app/src/androidTest/java/com/tdevelopers/solo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: themes.xml
app/src/test/java/com/tdevelopers/solo/: ExampleUnitTest.java
core/Algorithm/: S_List.h
core/algorithm/: S_Algorithm.h  S_List.h  S_String.h  S_Vector.h
core/algorithmm/: S_Algorithm.h  S_AlgorithmAllocator.h
core/debug/: S_Debug.cpp  S_Debug.h
core/math/: S_Mat4x4.h  S_Mat4x4.inl  S_Math.h  S_Quat.h  S_Quat.inl  S_Vec2.h  S_Vec2.inl  S_Vec3.h  S_Vec3.inl  S_Vec4.h  S_Vec4.inl
core/memory/: S_AlgorithmAllocator.cpp  S_AlgorithmAllocator.h  S_Allocator.cpp  S_Allocator.h
core/stl/: S_List.h  S_Map.h  S_String.h  S_Vector.h
core/utility/: S_ElapsedTime.cpp  S_ElapsedTime.h
gradle/wrapper/: gradle-wrapper.properties
solo/: Solo.h
solo/debug/: S_Debug.cpp  S_Debug.h
solo/input/: S_Input.cpp  S_Input.h
solo/math/: S_Mat4x4.h  S_Mat4x4.inl  S_Quat.h  S_Vec2.h  S_Vec2.inl  S_Vec3.h  S_Vec3.inl  S_Vec4.h  S_Vec4.inl
solo/memory/: S_AlgorithmAllocator.cpp  S_AlgorithmAllocator.h  S_Allocator.cpp  S_Allocator.h  S_NewDeleteOverrides.h
solo/stl/: S_Map.h  S_String.h  S_Vector.h
solo/thread/: S_Mutex.cpp  S_Mutex.h  S_Thread.cpp  S_Thread.h
solo/utility/: S_ElapsedTime.cpp
